@@ -1,5 +1,7 @@
 ChangeLog for Log-Contextual
 
+  - Allow custom log levels
+
 0.00305 2011-07-27
   - Fix regression that caused D* subs to dumper even if the log level was off
 
